Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-2364

ksck does not validate tablet server ID when checking connectivity

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 1.7.0
    • 1.8.0
    • ksck
    • None

    Description

      ksck checks that all tablet servers can be connected to, but during this check it doesn't validate that the expected tablet server ID matches the ID of the server which is connected to.

      So if you have a 3 node cluster, wipe a tserver's data dirs and restart it, ksck will say something like 'successfully connected to 4 tablet servers', because it connects to the wiped tserver twice.

       

      CC r1pp3rj4ck who expressed interest in fixing this.

      Attachments

        Activity

          People

            abukor Attila Bukor
            danburkert Dan Burkert
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: